@@ -8,7 +8,7 @@
                2007 Zoltan Bartko
                2008 Andrzej Sawula, Alex Buloichik
                2009 Didier Briel, Alex Buloichik
-               2010 Wildrich Fourie
+               2010 Wildrich Fourie, Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -479,32 +479,16 @@ public class MainWindowMenuHandler {
         Core.getTagValidation().validateTags();
     }
 
+    /**
+     * Identify all the tags in the source text and automatically inserts
+     * them into the target text.
+     */
     public void editTagPainterMenuItemActionPerformed() {
-        // Identify all the tags in the source text and automatically inserts
-        // them into the target text
+         
         String sourceText = Core.getEditor().getCurrentEntry().getSrcText();
-        String tagString = "";
+        String tagString = StaticUtils.buildPaintTagList(sourceText);
 
-        while (sourceText != null && sourceText.contains("<") && sourceText.contains(">"))
-            if(sourceText.indexOf("<") < sourceText.indexOf(">"))
-            {
-                int index1 = sourceText.indexOf("<");
-                int index2 = sourceText.indexOf(">");
-                int index3 = sourceText.indexOf("<", index2);
-
-                String space = "";
-                if(index3 - index2 > 1)
-                    space = " ";
-
-                // Test max char
-                int len = index2 - index1;
-                if(len <= 5)
-                    tagString = tagString + sourceText.substring(index1, index2 + 1) + space;
-                sourceText = sourceText.substring(index2 + 1);
-            }
-
-        if(!tagString.equals(""))
-        {
+        if(!tagString.equals("")) {
             Core.getEditor().insertText(tagString);
         }
     }
